--- a/public/css/common.css
+++ b/public/css/common.css
@@ -94,6 +94,9 @@ body {
     justify-content: space-around;
     align-items: center;
 }
+.signature {
+    margin-top: 30px;
+}
 .signature img {
     height: 40px;
     width: 100px;
@@ -134,7 +137,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1212px !IMPORTANT;
+    width: 1000px !IMPORTANT;
     margin: auto;
 }
 
